# PyToy

./: pyproject.toml
.github/workflows/: python.yml
src/pytoy/: cli.py  nginx.py
