[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytoy"
version = "v0"
authors = [{ name = "WitonAI", email = "author@example.com" }]
description = "PyToy package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/WitonAI/PyToy"
Issues = "https://github.com/WitonAI/PyToy/issues"
